<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent" android:layout_height="30dp" android:gravity="center"
        android:text="@string/changeCourse" android:textSize="16sp" />
    <EditText android:id="@+id/editText" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:minWidth="160dp" android:layout_margin="8dp" android:inputType="numberDecimal"
        android:imeOptions="actionDone" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="40dp"
        android:background="@color/colorMain">
        <TextView android:id="@+id/clear" android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_weight="1" android:gravity="center" android:text="@string/clear" android:textSize="16sp" />
        <TextView android:id="@+id/invert" android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_weight="1" android:gravity="center" android:text="@string/invert" android:textSize="16sp" />
        <TextView android:id="@+id/save" android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_weight="1" android:gravity="center" android:text="@string/save" android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>